--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
     <head>
+        <meta charset=utf-8>
         <title>CS Problems</title>
     </head>
-    <body>
-        There are only 2 hard problems in computer science : 
+    <body style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    ">
+        <h2>There are 2 hard problems in computer science</h2>
         <ul>
-            <li>Naming things
-            <li>Invalidating caches
-            <li>Off-by-one errors
+            <li>Naming things,       
+            <li>Cache invalidation,
+            <li>Off-by-one errors.
+        </ul>
     </body>
 </html>
